--- a/ui.packages/client-kit/src/simbols/RadioBox/default.module.scss
+++ b/ui.packages/client-kit/src/simbols/RadioBox/default.module.scss
@@ -84,7 +84,7 @@
 .temp {
 
   display: inline-block;
-  font-size: 9px;
-  color: $danger-lighten;
+  font-size: 10px;
+  color: $warning;
   margin: 0 0 0 16px;
 }
