--- a/modules/client/client-order-draft/src/components/@media/large.display.scss
+++ b/modules/client/client-order-draft/src/components/@media/large.display.scss
@@ -36,9 +36,16 @@
   margin: 80px 0 0;
 }
 
+.description {
+
+  display: block;
+  margin: 64px 0 0;
+  text-align: right;
+}
+
 .controls {
 
   display: block;
-  margin: 60px 0 0;
+  margin: 32px 0 0;
   text-align: right;
 }
