--- a/modules/client/client-order-draft/src/components/@media/middle.display.scss
+++ b/modules/client/client-order-draft/src/components/@media/middle.display.scss
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 auto;
-  margin: 80px 0 0;
+  margin: 40px 0 0;
 }
 
 .products {
@@ -35,9 +35,16 @@
   display: block;
 }
 
+.description {
+
+  display: block;
+  margin: 64px 0 0;
+  text-align: right;
+}
+
 .controls {
 
   display: block;
-  margin: 60px 0 0;
+  margin: 32px 0 0;
   text-align: right;
 }
