--- a/ui.packages/client-kit/src/simbols/Datepicker/Default/Dashboard/Dates/Days/default.module.scss
+++ b/ui.packages/client-kit/src/simbols/Datepicker/Default/Dashboard/Dates/Days/default.module.scss
@@ -63,6 +63,14 @@
   color: $white;
 }
 
+.disabled .container,
+.disabled:hover .container {
+
+  color: $gray;
+  background: transparent;
+  cursor: default;
+}
+
 .container {
 
   display: inline-flex;
