--- a/modules/client/comments/src/components/Comments/Comment/default.module.scss
+++ b/modules/client/comments/src/components/Comments/Comment/default.module.scss
@@ -12,7 +12,7 @@
   border: 1px solid $gray-darken;
   background: $background;
   border-radius: 4px;
-  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 20%);
+  //box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 20%);
   overflow: hidden;
 
   & + * {
