--- a/ui.packages/client-kit/src/Status/Default/default.module.scss
+++ b/ui.packages/client-kit/src/Status/Default/default.module.scss
@@ -6,12 +6,12 @@
 
   display: inline-block;
   font-family: inherit;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 600;
   letter-spacing: .5px;
   color: $white;
   background: $gray-darken;
-  padding: 4px 8px;
+  padding: 6px 8px 5px;
   border-radius: 4px;
 }
 
