--- a/modules/client/comments/src/components/Comments/Comment/default.module.scss
+++ b/modules/client/comments/src/components/Comments/Comment/default.module.scss
@@ -8,9 +8,9 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 auto;
-  padding: 12px 12px 16px;
+  padding: 16px 16px 24px;
   border: 1px solid $gray-darken;
-  background: $background;
+  background: rgba($gray-darken, .4);
   border-radius: 4px;
   //box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 20%);
   overflow: hidden;
