--- a/modules/client/about/src/components/default.module.scss
+++ b/modules/client/about/src/components/default.module.scss
@@ -1,31 +1,8 @@
 
-@import "~@ui.packages/theme";
-
-
-.wrapper {
-
-  display: block;
-  width: 900px;
+@media only screen and (min-width: 1281px) {
+  @import "./@media/large.display";
 }
 
-.header {
-
-  display: block;
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 18px;
-  letter-spacing: .5px;
-  margin: 0 0 40px;
-}
-
-
-.content {
-
-  display: block;
-}
-
-.controls {
-
-  display: block;
-  text-align: right;
+@media only screen and (max-width: 1280px) and (min-width: 901px) {
+  @import "./@media/middle.display";
 }
