cart out screen

--- a/modules/client/main/src/components/Aside/default.module.scss
+++ b/modules/client/main/src/components/Aside/default.module.scss
@@ -22,15 +22,13 @@
 .controls {
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex: 1 0;
 }
 
 .reset {
 
-  display: flex;
-  flex-direction: column;
-  flex: 0 0;
+  display: block;
 }
 
 .count {
