--- a/ui.packages/client-kit/src/simbols/Button/Default/default.module.scss
+++ b/ui.packages/client-kit/src/simbols/Button/Default/default.module.scss
@@ -26,7 +26,8 @@
     background: $primary-lighten;
   }
 
-  &:disabled {
+  &:disabled,
+  &:disabled:hover {
 
     background: $gray-darken;
     color: $gray-lighten;
