--- a/clients/client-ui/src/wrappers/Navigate/Header/Controls/Cart/default.module.scss
+++ b/clients/client-ui/src/wrappers/Navigate/Header/Controls/Cart/default.module.scss
@@ -4,33 +4,17 @@
 
 .wrapper {
 
-  //position: fixed;
-  //right: 0;
-  //bottom: 0;
+  position: fixed;
+  right: 48px;
+  bottom: 48px;
   display: block;
-  width: 100px;
-  height: 100px;
-  border-radius: 105px 0 0 0;
-  z-index: 99999;
-}
-
-.cart {
-
-  //position: absolute;
-  //right: 10px;
-  //bottom: 10px;
-}
-
-.background {
-
-  display: block;
-  width: 225px;
-  height: 225px;
-  border-radius: 50%;
-  background-color: $gray-darken;
-  background-image: url("food.svg");
-  background-size: 140px;
+  padding: 24px;
+  border: 1px solid $gray-darken;
+  background-color: $background;
+  background-image: url("./food.svg");
+  background-size: 120px;
   background-position: top center;
-
-  box-shadow: -2px -2px 6px 0 rgba(black, 20%);
+  border-radius: 50%;
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, .3);
+  z-index: 99999;
 }
