--- a/clients/admin-ui/src/wrappers/Navigate/Header/default.module.scss
+++ b/clients/admin-ui/src/wrappers/Navigate/Header/default.module.scss
@@ -5,40 +5,17 @@
 .header {
 
   display: flex;
-  flex: 1 0 auto;
+  flex: 1 0;
   flex-direction: row;
-  color: $white;
   align-items: center;
-  padding: 0 20px;
-
-  &__title {
-
-    display: flex;
-    flex: 1 0 auto;
-    padding: 20px 15px;
-    flex-direction: column;
-  }
-
-  .logotype {
-
-    display: inline-block;
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 20px;
-    color: $white;
-    text-decoration: none;
-    letter-spacing: .5px;
-  }
-
-  &__cart {
-
-    display: block;
-  }
+  padding: 8px 24px;
 }
 
-.container {
+.content {
 
-  display: block;
+  display: flex;
+  flex-direction: row;
+  flex: 1 0;
 }
 
 .controls {
@@ -46,16 +23,7 @@
   display: block;
 }
 
-.sign-out {
+.logotype {
 
-  font-size: 14px;
-  font-weight: 700;
-  color: $white;
-  cursor: pointer;
-  transition: color 200ms;
-
-  &:hover {
-
-    color: $danger;
-  }
+  display: inline-block;
 }
