--- a/modules/admin/products/src/components/default.module.scss
+++ b/modules/admin/products/src/components/default.module.scss
@@ -19,10 +19,15 @@
   margin: 0 0 40px;
 }
 
+.filter {
+
+  display: block;
+}
 
 .content {
 
   display: block;
+  margin: 56px 0 0;
 }
 
 .controls {
