--- a/clients/client-ui/src/wrappers/Navigate/Header/@media/large.display.scss
+++ b/clients/client-ui/src/wrappers/Navigate/Header/@media/large.display.scss
@@ -30,8 +30,13 @@
 
   display: flex;
   flex-direction: column;
-  flex: 1 0;
+  flex: 0 0 auto;
   overflow: auto;
+
+  & + & {
+
+    margin: 0 0 0 56px;
+  }
 }
 
 .controls {
