--- a/clients/client-ui/src/wrappers/Navigate/Header/Description/default.module.scss
+++ b/clients/client-ui/src/wrappers/Navigate/Header/Description/default.module.scss
@@ -5,6 +5,7 @@
 .wrapper {
 
   display: block;
+  overflow: hidden;
 }
 
 .col {
@@ -13,6 +14,19 @@
 
   & + & {
 
-    margin: 16px 0 0;
+    margin: 12px 0 0;
   }
+}
+
+.phone {
+
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  text-shadow: 0 0 2px $background;
+  color: $white;
+  text-decoration: none;
+  background: $warning-darken;
+  padding: 4px 8px;
+  border-radius: 4px;
 }
