--- a/modules/client/main/src/components/default.module.scss
+++ b/modules/client/main/src/components/default.module.scss
@@ -5,7 +5,7 @@
 .wrapper {
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex: 1 0;
   width: 1200px;
 }
@@ -30,4 +30,28 @@
   flex-direction: column;
   flex: 1 0;
   margin: 0 0 0 24px;
+}
+
+.controls {
+
+  display: flex;
+  flex-direction: row;
+  flex: 1 0;
+}
+
+.footer {
+
+  display: block;
+  margin: 80px 0 0;
+
+  .header {
+
+    display: block;
+  }
+
+  .text {
+
+    display: block;
+    margin: 32px 0 0;
+  }
 }
